[MODIFY] User API updated with swagger
