# routes/api.php
@@ -3,6 +3,6 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-Route::middleware(['auth:sanctum'])->get('/user', function (Request $request) {
-    return $request->user();
-});
+use App\Http\Controllers\Api\V1\UserController;
+
+Route::middleware(['auth:sanctum'])->get('/v1/user', [UserController::class, 'getUser']);
