# storage/api-docs/api-docs.json
@@ -5,6 +5,39 @@
         "version": "0.1"
     },
     "paths": {
+        "/api/v1/user": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get User Detail",
+                "description": "Get User Detail",
+                "operationId": "getUser",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "tags": [
@@ -270,13 +303,28 @@
             }
         }
     },
-    "tags": [
-        {
-            "name": "Authentication",
-            "description": "Authentication"
-        }
-    ],
     "components": {
+        "schemas": {
+            "User": {
+                "description": "User Schema",
+                "properties": {
+                    "id": {
+                        "description": "User ID",
+                        "type": "number"
+                    },
+                    "name": {
+                        "description": "User name",
+                        "type": "string"
+                    },
+                    "email": {
+                        "description": "User email",
+                        "type": "string",
+                        "example": "test@test.com"
+                    }
+                },
+                "type": "object"
+            }
+        },
         "securitySchemes": {
             "sanctum": {
                 "type": "apiKey",
@@ -285,5 +333,15 @@
                 "in": "header"
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "User",
+            "description": "User"
+        },
+        {
+            "name": "Authentication",
+            "description": "Authentication"
+        }
+    ]
 }
